# dhall-to-etlas

./: .gitignore  Changelog.md  cabal.project  dhall-to-cabal.cabal  dhall-to-cabal.dhall  dhall-to-etlas.cabal  dhall-to-etlas.dhall  stack.yaml
cabal-to-dhall/: Main.hs
dhall/: dependencies.dhall  prelude.dhall  types.dhall  unconditional.dhall
dhall/Dependency/: any.dhall  anyOfVersions.dhall  cons.dhall  majorVersions.dhall  orLater-earlier.dhall  package.dhall  pvp.dhall  singleInterval.dhall
dhall/SPDX/: noException.dhall  package.dhall
dhall/Version/: toText.dhall
dhall/VersionRange/: anyOfVersions.dhall  differenceVersionRanges.dhall  earlierVersion.dhall  intersectVersionRanges.dhall  intervalsVersionRange.dhall  invertVersionRange.dhall  laterVersion.dhall  majorBoundVersion.dhall  noVersion.dhall  notThisVersion.dhall  orEarlierVersion.dhall  orLaterVersion.dhall  thisVersion.dhall  unionVersionRanges.dhall  withinVersion.dhall
dhall/defaults/: BuildInfo.dhall  CompilerOptions.dhall  Executable.dhall  Package.dhall  SimpleBuildInfo.dhall  SimplePackage.dhall  SourceRepo.dhall  all.dhall  empty.dhall
dhall/types/: Arch.dhall  BuildInfo.dhall  BuildType.dhall  Compiler.dhall  Extension.dhall  Library.dhall  License.dhall  Package.dhall  SimpleBuildInfo.dhall  SimplePackage.dhall  SourceRepo.dhall  VersionRange.dhall
dhall/types/SPDX/: LicenseExceptionId.dhall
dhall/utils/: GitHubTag-project.dhall  GitHubTag-simple-project.dhall  default-project.dhall  defaultProject.dhall  majorVersions.dhall  mapBuildInfo.dhall  package.dhall  resetBuildInfo.dhall  resetComponent.dhall  simple-component.dhall  simpleComponent.dhall  thisVersions.dhall  toBuildInfo.dhall  unionVersions.dhall
dhall/utils/dependency/: cons.dhall  pvp.dhall
exe/: Main.hs
golden-tests/: GoldenTests.hs
golden-tests/cabal-to-dhall/: autogen-includes.dhall  benchmark.cabal  benchmark.dhall  conditional-dependencies.cabal  conditional-dependencies.dhall  default-license-2.2.cabal  default-license-2.2.dhall  dhall-to-etlas.cabal  dhall-to-etlas.dhall  etlas-defaults.cabal  etlas-defaults.dhall  executable.cabal  executable.dhall  gh-36.cabal  gh-36.dhall  lib-vis-2.dhall  lib-vis.dhall  mixins-no-signatures.cabal  mixins-no-signatures.dhall  otheros.cabal  otheros.dhall  repotypeunknown.dhall  simple.cabal  simple.dhall  sourcerepo-defaults.dhall  unknown-license.dhall
golden-tests/dhall-to-cabal/: allrightsreserved-2.0.dhall  allrightsreserved-2.2.dhall  compiler-options-order.dhall  conditional-dependencies.dhall  default-license-2.2.dhall  dhall-eta.cabal  dhall-eta.dhall  dhall-to-etlas.cabal  dhall-to-etlas.dhall  empty-package.dhall  gh-53.dhall  gh-55.dhall  map-build-info.cabal  map-build-info.dhall  map-source-repo.dhall  mixins-no-signatures.dhall  nested-conditions.dhall  wai-servlet-handler-jetty.dhall  wai-servlet.dhall
lib/: CabalToDhall.hs  DhallLocation.hs  DhallToCabal.hs
lib/Dhall/: Extra.hs
lib/DhallToCabal/: Diff.hs  FactorType.hs
meta/: Main.hs
