cabal-version: 1.12
name: etlas-defaults
version: 1
build-type: Simple
license: AllRightsReserved
         
executable hello
  main-is: Main.hs
  default-language: Haskell2010
  default-extensions: BangPatterns
                      DataKinds
                      DeriveFoldable
                      DeriveFunctor
                      DeriveGeneric
                      DeriveTraversable
                      EmptyCase
                      ExistentialQuantification
                      FlexibleContexts
                      FlexibleInstances
                      FunctionalDependencies
                      GeneralizedNewtypeDeriving
                      MagicHash
                      MultiParamTypeClasses
                      MultiWayIf
                      LambdaCase
                      OverloadedStrings
                      RankNTypes
                      StandaloneDeriving
                      ScopedTypeVariables
                      TupleSections
                      TypeFamilies
                      TypeOperators
  ghc-options: -Wall
               -fwarn-incomplete-uni-patterns
               -fwarn-incomplete-record-updates
