name:                wai-servlet
version:             0.1.5.0
cabal-version:       2.0
build-type:          Simple
                        
Flag wai-servlet-debug
    Description: print debug output. not suitable for production
    Default:     False

library
  default-language: Haskell2010
  if impl(ghc >= 0.0.9.7)
     cpp-options:      -DINTEROP
  if impl(ghc < 0.7.0.2)
     cpp-options:      -DPURE_JAVA_WITH
  if impl(ghc >= 0.0.9)
     java-sources:     java/Utils.java
  if flag(wai-servlet-debug)
     cpp-options:      -DWAI_SERVLET_DEBUG
     maven-depends:    javax.servlet:servlet-api:2.5