name: dhall-eta
version: 1.0.0
cabal-version: 1.12
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: atreyu.bbb@gmail.com
homepage: https://github.com/eta-lang/dhall-eta
package-url: https://github.com/eta-lang/dhall-eta
bug-reports: https://github.com/eta-lang/dhall-eta/issues
synopsis: dhall-eta is a eta library that wraps the haskell implementation of dhall configuration language.
category: Language
author: Javier Neira Sánchez <atreyu.bbb@gmail.com>
extra-source-files:
    build.gradle
    dhall-eta.cabal
    dhall-eta.dhall
    examples/build.gradle
    examples/src/main/java/org/dhall/eta/example/*.java
    gradlew
    gradlew.bat
    gradle/wrapper/gradle-wrapper.jar
    gradle/wrapper/gradle-wrapper.properties
    java/build.gradle
    java/src/main/java/org/dhall/*.java
    java/src/main/java/org/dhall/binary/*.java
    java/src/main/java/org/dhall/binary/decoding/failure/*.java
    java/src/main/java/org/dhall/common/types/*.java
    java/src/main/java/org/dhall/common/types/either/*.java
    java/src/main/java/org/dhall/common/types/functor/*.java
    java/src/main/java/org/dhall/core/*.java
    java/src/main/java/org/dhall/core/constant/*.java
    java/src/main/java/org/dhall/core/expr/*.java
    java/src/main/java/org/dhall/core/imports/*.java
    java/src/main/java/org/dhall/core/imports/hashed/*.java
    java/src/main/java/org/dhall/core/imports/types/*.java
    java/src/main/java/org/dhall/core/imports/types/url/*.java
    proguard.txt
    README.md
    settings.gradle
    src/main/java/org/dhall/eta/*.java
    src/test/resources/import/data/foo/bar/*.dhall
    src/test/resources/import/success/*.dhall

source-repository this
    type: git
    location: https://github.com/eta-lang/dhall-eta
    tag: 1.0.0

library
    exposed-modules:
        Dhall.Eta
        Dhall.Eta.Binary
        Dhall.Eta.Context
        Dhall.Eta.Core
        Dhall.Eta.Core.Java
        Dhall.Eta.Import
        Dhall.Eta.Parser
        Dhall.Eta.Parser.Java
        Dhall.Eta.TypeCheck
        Dhall.Eta.TypeCheck.Java
        Eta.Types
    build-depends:
        base >=4.5 && <5,
        bytestring ==0.10.*,
        containers ==0.5.*,
        contravariant ==1.5.*,
        cryptonite >=0.23 && <1.0,
        dhall >=1.19.1 && <1.20,
        eta-java-interop >=0.1.5.0 && <0.1.6,
        megaparsec >=6.1.1 && <7.1,
        memory >=0.14 && <0.15,
        scientific >=0.3.0.0 && <0.4,
        serialise >=0.2.0.0 && <0.3,
        text ==1.2.*,
        transformers >=0.2.0.0 && <0.6,
        dotgen >=0.4.2 && <0.5,
        lens-family-core >=1.0.0 && <1.3,
        prettyprinter >=1.2.0.1 && <1.3
    java-sources:
        @classes.java
    default-language: Haskell2010
    default-extensions: BangPatterns DataKinds DeriveFoldable
                        DeriveFunctor DeriveGeneric DeriveTraversable EmptyCase
                        ExistentialQuantification FlexibleContexts FlexibleInstances
                        FunctionalDependencies GeneralizedNewtypeDeriving MagicHash
                        MultiParamTypeClasses MultiWayIf LambdaCase OverloadedStrings
                        RankNTypes StandaloneDeriving ScopedTypeVariables TupleSections
                        TypeFamilies TypeOperators
    hs-source-dirs: src/main/eta
    other-modules:
        Dhall.Eta.Map
    ghc-prof-options: -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
    ghc-shared-options: -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
    ghc-options: -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates

executable  dhall-eta-all
    main-is: Main.hs
    build-depends:
        base >=4.5 && <5,
        dhall-eta -any
    default-language: Haskell2010
    default-extensions: BangPatterns DataKinds DeriveFoldable
                        DeriveFunctor DeriveGeneric DeriveTraversable EmptyCase
                        ExistentialQuantification FlexibleContexts FlexibleInstances
                        FunctionalDependencies GeneralizedNewtypeDeriving MagicHash
                        MultiParamTypeClasses MultiWayIf LambdaCase OverloadedStrings
                        RankNTypes StandaloneDeriving ScopedTypeVariables TupleSections
                        TypeFamilies TypeOperators
    hs-source-dirs: examples/src/main/eta
    ghc-prof-options: -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
    ghc-shared-options: -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
    ghc-options: -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates

test-suite  tasty
    type: exitcode-stdio-1.0
    main-is: Dhall/Eta/Test/Main.hs
    build-depends:
        base >=4.5 && <5,
        dhall >=1.19.1 && <1.20,
        directory >=1.2.2.0 && <1.4,
        filepath ==1.4.*,
        tasty >=0.11.2 && <1.2,
        text ==1.2.*,
        transformers >=0.2.0.0 && <0.6,
        dhall-eta -any,
        tasty-hunit >=0.9.2 && <0.11
    default-language: Haskell2010
    default-extensions: BangPatterns DataKinds DeriveFoldable
                        DeriveFunctor DeriveGeneric DeriveTraversable EmptyCase
                        ExistentialQuantification FlexibleContexts FlexibleInstances
                        FunctionalDependencies GeneralizedNewtypeDeriving MagicHash
                        MultiParamTypeClasses MultiWayIf LambdaCase OverloadedStrings
                        RankNTypes StandaloneDeriving ScopedTypeVariables TupleSections
                        TypeFamilies TypeOperators
    hs-source-dirs: src/test/eta
    other-modules:
        Dhall.Eta.Test.Common
        Dhall.Eta.Test.Import
        Dhall.Eta.Test.Normalization
        Dhall.Eta.Test.Parser
        Dhall.Eta.Test.TypeCheck
    ghc-prof-options: -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
    ghc-shared-options: -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
    ghc-options: -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
