name: pkg
version: 0
cabal-version: 1.12
build-type: Simple
license: UnspecifiedLicense

library
    build-depends:
        library ==1.0,
        injected ==1.0

library  sublib
    build-depends:
        sublib ==1.0,
        injected ==1.0

executable  exe
    main-is: Exe.hs
    build-depends:
        exe ==1.0,
        injected ==1.0

test-suite  tests
    type: exitcode-stdio-1.0
    main-is: Test.hs
    build-depends:
        tests ==1.0,
        injected ==1.0

benchmark  bench
    type: exitcode-stdio-1.0
    main-is: Bench.hs
    build-depends:
        bench ==1.0,
        injected ==1.0
